--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.25",
@@ -17,8 +18,7 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "your_app_name": "file:",
-    "@react-native-picker/picker": "2.9.0"
+    "your_app_name": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
