--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "your_app_name": "file:"
+    "your_app_name": "file:",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
