--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "your_app_name": "file:",
-    "react-native-maps": "1.18.0"
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
